deploy/kubernetes/kustomize/overlays/mac/kustomize_generated_script.yml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-noted-xero
---
apiVersion: v1
kind: Service
metadata:
  name: note2xero-srv
  namespace: apps-noted-xero
spec:
  ports:
  - nodePort: 30002
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: noted-web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: noted-frontend-service
  namespace: apps-noted-xero
spec:
  ports:
  - name: http-xerowebport
    nodePort: 30003
    port: 80
    targetPort: 80
  selector:
    app: noted-frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noted-frontend
  name: noted-frontend
  namespace: apps-noted-xero
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: noted-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: noted-frontend
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            port: 80
            scheme: HTTP
        name: noted-frontend
        resources:
          limits:
            cpu: 10m
            memory: 256M
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: main-page
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: main-page
        name: main-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noted-web
  name: noted-web
  namespace: apps-noted-xero
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: noted-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: noted-web
    spec:
      containers:
      - image: phiroict/noted2xero_web:1.11.3_arm
        imagePullPolicy: Always
        livenessProbe:
          initialDelaySeconds: 20
          tcpSocket:
            port: 8000
        name: noted-frontend
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: healthcheck
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 30
        resources:
          limits:
            cpu: 10m
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-xero2noted
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: noted-frontend-service
            port:
              number: 80
        path: /xero
        pathType: Prefix
      - backend:
          service:
            name: xero-web-service
            port:
              number: 8000
        path: /noted
        pathType: Prefix
